--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Thu Nov 18 12:50:09 GMT+08:00 2010
+#Tue Nov 23 22:47:55 GMT+08:00 2010
 app.grails.version=1.3.5
 app.name=jquery-validation-ui
+plugins.blueprint=1.0.0
 plugins.hibernate=1.3.5
 plugins.jquery=1.4.3.2
 plugins.jquery-validation=1.7
