--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Wed Dec 22 18:14:07 GMT+08:00 2010
+#Wed Dec 29 22:21:50 GMT+08:00 2010
 app.grails.version=1.3.6
 app.name=jquery-validation-ui
 plugins.blueprint=1.0.0
+plugins.constraints=0.5.1
 plugins.hibernate=1.3.6
 plugins.jquery=1.4.2.7
 plugins.jquery-validation=1.7
