ready for 1.3 release

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Thu Jul 12 15:09:18 GMT+08:00 2012
+#Mon Aug 13 21:50:04 GMT+08:00 2012
 app.grails.version=2.1.0
 app.name=jquery-validation-ui
 plugins.hibernate=2.1.0
+plugins.release=2.0.4
 plugins.tomcat=2.1.0
