add jqueryValidationUi.constraints.unique.noId to config to turn on/off(default) passing of id to server for unique constraint. Upgrade to grails 2.2.2 and published 1.4.5 release

--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Fri Feb 22 11:16:01 GMT+08:00 2013
-app.grails.version=2.2.0
+#Tue Aug 20 17:32:23 SGT 2013
+app.grails.version=2.2.2
 app.name=jquery-validation-ui
-plugins.hibernate=2.2.0
+plugins.hibernate=2.2.2
 plugins.release=2.0.4
-plugins.tomcat=2.2.0
+plugins.tomcat=2.2.2
