--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Tue Aug 20 17:32:23 SGT 2013
-app.grails.version=2.2.2
+#Mon Nov 04 21:33:22 SGT 2013
+app.grails.version=2.3.1
 app.name=jquery-validation-ui
+app.servlet.version=2.5
 plugins.hibernate=2.2.2
 plugins.release=2.0.4
 plugins.tomcat=2.2.2
