Made compatible with Grails 2.4 and Asset Pipeline plugin.

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Mon Nov 04 21:33:22 SGT 2013
-app.grails.version=2.3.1
+#Tue Jun 10 11:33:49 CDT 2014
+app.grails.version=2.5.0
 app.name=jquery-validation-ui
 app.servlet.version=2.5
